# book_chewer

./: .gitignore  manage.py  pyproject.toml  readme.md
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py
book_chewer/: asgi.py  settings.py  wsgi.py
publications/: admin.py  models.py  validators.py
publications/migrations/: 0001_initial.py  0002_auto_20210402_1719.py
reviewers/: admin.py  models.py
reviewers/migrations/: 0001_initial.py  0002_auto_20210402_1738.py
